`feat: add generate token implementation for JWT Auth`
