# cmd/api/auth.go
@@ -5,9 +5,11 @@ import (
 	"encoding/hex"
 	"fmt"
 	"net/http"
+	"time"
 
 	"github.com/AlfanDutaPamungkas/Go-Social/internal/mailer"
 	"github.com/AlfanDutaPamungkas/Go-Social/internal/store"
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/google/uuid"
 )
 
@@ -24,16 +26,16 @@ type UserWithToken struct {
 
 //	registerUserHandler godoc
 //
-// @Summary		Registers a user
-// @Description	Registers a user
-// @Tags			authentication
-// @Accept			json
-// @Produce		json
-// @param			payload	body	RegisterUserPayload	true	"User credentials"
-// @Success		201		{object}	UserWithToken			"user registered"
-// @Failure		400		{object}	error
-// @Failure		500		{object}	error
-// @Router			/authentication/user [post]
+//	@Summary		Registers a user
+//	@Description	Registers a user
+//	@Tags			authentication
+//	@Accept			json
+//	@Produce		json
+//	@param			payload	body		RegisterUserPayload	true	"User credentials"
+//	@Success		201		{object}	UserWithToken		"user registered"
+//	@Failure		400		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/authentication/user [post]
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload RegisterUserPayload
 	if err := readJSON(w, r, &payload); err != nil {
@@ -80,11 +82,11 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 
 	activationURL := fmt.Sprintf("%s/confirm/%s", app.config.frontendURL, plainToken)
 
-	vars := struct{
-		Username string
+	vars := struct {
+		Username      string
 		ActivationURL string
 	}{
-		Username: user.Username,
+		Username:      user.Username,
 		ActivationURL: activationURL,
 	}
 
@@ -92,7 +94,7 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 	if err != nil {
 		app.logger.Errorw("error sending welcome email", "error", err)
 
-		if err := app.store.Users.Delete(r.Context(), user.ID); err != nil{
+		if err := app.store.Users.Delete(r.Context(), user.ID); err != nil {
 			app.logger.Errorw("error deleting user", "error", err)
 		}
 
@@ -102,6 +104,72 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 	app.logger.Info("Email sent successfully")
 
 	if err := app.jsonResponse(w, http.StatusCreated, userWithToken); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+}
+
+type CreateUserTokenPayload struct {
+	Email    string `json:"email" validate:"required,email,max=255"`
+	Password string `json:"password" validate:"required,min=3,max=72"`
+}
+
+//	createTokenHandler godoc
+//
+//	@Summary		Creates a token
+//	@Description	Creates a token for a user
+//	@Tags			authentication
+//	@Accept			json
+//	@Produce		json
+//	@param			payload	body		CreateUserTokenPayload	true	"User credentials"
+//	@Success		201		{string}	string					"Token"
+//	@Failure		400		{object}	error
+//	@Failure		401		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/authentication/token [post]
+func (app *application) createTokenHandler(w http.ResponseWriter, r *http.Request) {
+	var payload CreateUserTokenPayload
+	if err := readJSON(w, r, &payload); err != nil {
+		app.badRequestResponse(w, r, err)
+		return
+	}
+
+	if err := Validate.Struct(payload); err != nil {
+		app.badRequestResponse(w, r, err)
+		return
+	}
+	
+	user, err := app.store.Users.GetByEmail(r.Context(), payload.Email)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.unauthorizedResponse(w, r, fmt.Errorf("invalid credentials"))
+		default:
+			app.internalServerError(w, r, err)
+		}
+		return
+	}
+
+	if !user.Password.Verify(payload.Password){
+		app.unauthorizedResponse(w, r, fmt.Errorf("invalid credentials"))
+		return
+	}
+
+	claims := jwt.MapClaims{
+		"sub": user.ID,
+		"exp": time.Now().Add(app.config.auth.token.exp).Unix(),
+		"iat": time.Now(),
+		"nbf": time.Now(),
+		"iss": app.config.auth.token.iss,
+		"aud": app.config.auth.token.iss,
+	}
+	token, err := app.authenticator.GenerateToken(claims)
+	if err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	if err := app.jsonResponse(w, http.StatusCreated, token); err != nil {
 		app.internalServerError(w, r, err)
 		return
 	}
